--- a/Converter/Views/_ViewImports.cshtml
+++ b/Converter/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using Converter
+@using Converter.View.ViewModels
 @namespace Converter.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
